# bunifu_django_auth

./: .gitignore  CONTRIBUTORS  LICENCE  README.md  pyproject.toml  pytest.ini  rav.yaml  test.http
src/bunifu_django_auth/: __init__.py  apps.py  urls.py
src/bunifu_django_auth/apis/: urls.py
src/bunifu_django_auth/apis/serializers/: logout.py  register.py
src/bunifu_django_auth/apis/views/: logout.py  register.py
src/bunifu_django_auth/config/: defaults.py
src/bunifu_django_auth/managers/: users.py
src/bunifu_django_auth/migrations/: 0001_initial.py  0002_alter_bunifuuser_groups_and_more.py
src/bunifu_django_auth/models/: __init__.py  base.py  users.py
src/test/auth/: test_login.py  test_logout.py  test_refresh.py  test_register.py
src/test/config/: settings.py
src/test/factories/: users.py
