[project]
name = "bunifu-django-auth"
version = "0.2.8"
description = "Internal authentication package using Django Allauth, DRF and SimpleJWT"
authors = [{ name = "Bunifu Capital" }]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "django>=5.2",
    "djangorestframework",
    "django-allauth",
    "djangorestframework-simplejwt"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "faker>=40.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.12.0",
    "rav>=0.4.3",
    "twine>=6.2.0",
]
[project.urls]
Homepage = "https://github.com/creativeCreditAI/bunifu_django_auth"
Repository = "https://github.com/creativeCreditAI/bunifu_django_auth"



